--- a/Artificial Intelligence/GameAI-master/GameAI/GameAI.vcxproj
+++ b/Artificial Intelligence/GameAI-master/GameAI/GameAI.vcxproj
@@ -69,6 +69,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BaseTank.cpp" />
+    <ClCompile Include="DumbTank.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="ProjectileManager.cpp" />
     <ClCompile Include="Collisions.cpp" />
@@ -92,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseTank.h" />
+    <ClInclude Include="DumbTank.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="ProjectileManager.h" />
     <ClInclude Include="C2DMatrix.h" />
